Revert "Fix display overflow on metadata edit form dialog (#1810)"
This reverts commit d76251ba215eb01b4b954050785de0e9a5d9fe43.

--- a/booklore-ui/src/app/features/metadata/component/book-metadata-center/metadata-editor/metadata-editor.component.scss
+++ b/booklore-ui/src/app/features/metadata/component/book-metadata-center/metadata-editor/metadata-editor.component.scss
@@ -19,19 +19,7 @@
 }
 
 ::ng-deep .p-autocomplete-input-chip {
-  width: 2rem;
-}
-
-::ng-deep .p-autocomplete-clearable ul {
-  padding-inline-end: 2rem !important;
-}
-
-::ng-deep .p-autocomplete-clearable .p-autocomplete-clear-icon {
-  right: 0px;
-  margin-top: -1rem;
-  width: 2rem;
-  height: 2rem;
-  padding: 0.5rem;
+  width: 7rem;
 }
 
 ::ng-deep .withbutton input,
